--- a/src/components/Credits/Credits.scss
+++ b/src/components/Credits/Credits.scss
@@ -2,22 +2,9 @@
   display: flex;
   flex-direction: column;
 
-  &__list {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-
-    margin-right: auto;
-  }
-
-  &__list-element {
-    display: flex;
-    align-items: center;
-  }
-
   &__text {
     //white-space: pre-line;
-    //text-wrap: wrap;
+    text-wrap: wrap;
     margin-bottom: 0;
 
     &:nth-of-type(n + 2)::before {
@@ -40,14 +27,10 @@
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
+    text-wrap: wrap;
 
     @media screen and (max-width: 1440px) {
       font-size: 14px;
     }
-  }
-
-  &__image {
-    height: 20px;
-    margin-left: 10px;
   }
 }
